@@ -1,5 +1,10 @@
 2008-02-12  Raul Mateos  <raulofpandora@gmail.com>
 
+	* operation/agentes/estado_agente.php, general/header.php: small changes
+	to solve small problem with header in IE7.
+
+2008-02-12  Raul Mateos  <raulofpandora@gmail.com>
+
 	* include/languages/language_en.php: Corrected typo.
 
 2008-02-11  Raul Mateos  <raulofpandora@gmail.com>
